# mcp-distributed-crawler

./: .env  .env.example  .gitignore  DFD_SYSTEM_OPTIMIZATION_SUMMARY.md  HUMANIZED_ACCESS_GUIDE.md  PROJECT_TEST_SUMMARY.md  README.md  baidu_response.html  bing_response.html  check_redis.py  client.py  crawler_framework.py  dfd_knowledge_collection_action_plan.md  dfd_knowledge_improvement_plan.md  dfd_process_naming_knowledge.md  enhanced_dfd_collector.py  enhanced_dfd_report.md  format_processor.py  generate_llm_ready_data.py  google_response.html  knowledge_organizer.py  login_and_save_cookie.py  network_diagnostic.py  patient_tor_test.py  proxy_network_test.py  proxy_pool_config.json  proxy_pool_example.py  pyproject.toml  quick_start.bat  quick_test.py  requirements.txt  server.py  simple_proxy_test.py  simulated_client.py  start_distributed_system.py  stealth_crawler_demo.py  test_crawler.py  test_dfd_collection.py  test_dfd_report.md  test_distributed_system.py  (+13 more)
config/: CONFIG_GUIDE.md  README.md  dfd_process_naming_rules.json  format_templates.json  system_prompts.json  torrc_proxy
distributed/: .env.example  README.md  __init__.py  access_controller.py  config.py  development.yaml  monitoring.py  production.yaml  requirements.txt  result_collector.py  task_queue.py  task_scheduler.py  test_complete_system.py  test_system.py  testing.yaml  validate_system.py  worker_node.py
docs/: CONFIG_GUIDE.md  TOR_USAGE_GUIDE.md  dfd_knowledge_enhancement_prompts.md  distributed_crawler_architecture.md  targeted_dfd_knowledge_collection_prompts.md
tests/: debug_tor.py  (+6 more)
(+173 files in other folders)
