[project]
name = "mcp-client"
version = "0.1.0"
description = "A powerful universal web scraping and content analysis system based on MCP (Model Context Protocol)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepseek>=1.0.0",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "openrouter>=1.0",
    "python-dotenv>=1.1.0",
]
